# gavel-studio-v2.0

./: .gitattributes  .gitignore  LICENSE  LICENSE.txt  README.md  docker-compose.gpu.yml  docker-compose.yml  run.sh  setup-docker.sh
backend/: .dockerignore  .env.example  Dockerfile  main.py  pytest.ini  requirements.txt  setup.cfg
backend/classifier_engine/: RNN.py  cancellation.py  dialogue_dataset.py  inference_core.py  realtime_core.py  selection.py  trainer.py  utils_train.py
backend/compute_jobs/: infer_job.py  realtime_job.py  train_job.py
backend/evaluation/: __init__.py  adapter.py  inference.py  model_cache.py  neutral_corpus.py  realtime.py  ruleset_builder.py
backend/gavel_pipeline/: __init__.py  ce_generator.py  db_access.py  generate_config.py  rule_generator.py  train_set_generator.py
backend/routes/: __init__.py  (+14 more)
central-server/: .env.example  Dockerfile  README.md  _create_db.py  backfill_rating_creators.py  docker-compose.yml  render.yaml  requirements-dev.txt  requirements.txt  seed_gavel_user.py
cluster/: SETUP.md  gavel_infer.sbatch  gavel_realtime.sbatch  gavel_train.sbatch  setup_cluster_env.sh  setup_local.ps1  setup_local.sh
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.js
gavel-gpu-worker/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup_worker.sh
gavel-gpu-worker/gavel_gpu_worker/: __init__.py  app.py  auth.py  config.py  orchestrator.py
gavel-gpu-worker/scripts/: stage_engine.py
gavel-gpu-worker/tests/: test_app_infer.py
(+311 files in other folders)
